[gd_scene load_steps=21 format=3 uid="uid://cjnea8maf3y5l"]

[ext_resource type="PackedScene" uid="uid://co6wwlpta51be" path="res://prefabs/Hubert.tscn" id="1_n63l7"]
[ext_resource type="Script" path="res://prefabs/main_dock_script.gd" id="1_wjf3g"]
[ext_resource type="PackedScene" uid="uid://b1h2w6ctilpdy" path="res://prefabs/battle scenarios/battle Scenario.tscn" id="2_xyfop"]
[ext_resource type="Script" path="res://prefabs/main_dock_animation_player.gd" id="3_nsanw"]
[ext_resource type="Texture2D" uid="uid://wswl8qs1ug0u" path="res://art/temp_assets/baddie.png" id="5_4djew"]
[ext_resource type="PackedScene" uid="uid://gpn4laugdwmm" path="res://prefabs/damage_donator.tscn" id="5_krbdy"]
[ext_resource type="Script" path="res://prefabs/main_camera.gd" id="5_ts60k"]
[ext_resource type="Script" path="res://prefabs/all_combo_container.gd" id="6_33w4j"]
[ext_resource type="Script" path="res://Resources/combos/player/player_combo.gd" id="7_lru2h"]
[ext_resource type="Resource" uid="uid://kq1uq0yxny0g" path="res://Resources/combos/player/slippy_trip.tres" id="8_0wops"]

[sub_resource type="Animation" id="Animation_vog60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l5h7e"]
resource_name = "combo_slippy_trip"
length = 0.60001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"combo:slippy_trip"]
}

[sub_resource type="Animation" id="Animation_wnkjl"]
resource_name = "hubert_basic_punch"
length = 0.266673
step = 0.0666667
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("damage_donator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Player", "Enemy", 5],
"method": &"_damage_donation"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"basic:punch"]
}

[sub_resource type="Animation" id="Animation_r0b40"]
resource_name = "hubert_high_block"
length = 0.266673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"basic:high_block"]
}

[sub_resource type="Animation" id="Animation_dym15"]
resource_name = "hubert_low_block"
length = 0.266673
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"basic:low_block"]
}

[sub_resource type="Animation" id="Animation_ms2gy"]
resource_name = "hubert_basic_kick"
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"basic:kick"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("damage_donator")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.466667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Player", "Enemy", 5],
"method": &"_damage_donation"
}]
}

[sub_resource type="Animation" id="Animation_rm7sm"]
resource_name = "hubert_basic_chop"
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hubert/Hubert_Sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"basic:chop"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hubert/Hubert_Sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("damage_donator")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Player", "Enemy", 5],
"method": &"_damage_donation"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b23nh"]
_data = {
"RESET": SubResource("Animation_vog60"),
"combo_slippy_trip": SubResource("Animation_l5h7e"),
"hubert_basic_chop": SubResource("Animation_rm7sm"),
"hubert_basic_kick": SubResource("Animation_ms2gy"),
"hubert_basic_punch": SubResource("Animation_wnkjl"),
"hubert_high_block": SubResource("Animation_r0b40"),
"hubert_low_block": SubResource("Animation_dym15")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vft4o"]
size = Vector2(134.002, 786)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljyot"]
size = Vector2(185, 159)

[node name="main dock" type="Node2D"]
script = ExtResource("1_wjf3g")
battle_scenarios = Array[PackedScene]([ExtResource("2_xyfop")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b23nh")
}
script = ExtResource("3_nsanw")

[node name="Hubert" parent="." instance=ExtResource("1_n63l7")]
position = Vector2(147, 318)
scale = Vector2(2.81022, 2.81022)

[node name="Hubert_Sprites" parent="Hubert" index="0"]
animation = &"Idle"
frame = 0
frame_progress = 0.0

[node name="main_camera" type="Camera2D" parent="Hubert"]
script = ExtResource("5_ts60k")

[node name="dock" type="StaticBody2D" parent="."]
position = Vector2(331, 464)
rotation = 1.57079
scale = Vector2(1, 2.36)

[node name="Sprite2D" type="Sprite2D" parent="dock"]
scale = Vector2(0.219833, 0.998438)
texture = ExtResource("5_4djew")

[node name="CollisionShape2D" type="CollisionShape2D" parent="dock"]
shape = SubResource("RectangleShape2D_vft4o")

[node name="Fishing spot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fishing spot"]
position = Vector2(431, 317)
shape = SubResource("RectangleShape2D_ljyot")
one_way_collision_margin = 0.0

[node name="damage_donator" parent="." instance=ExtResource("5_krbdy")]

[node name="all combo container" type="Node2D" parent="."]
script = ExtResource("6_33w4j")
combo_resources = Array[ExtResource("7_lru2h")]([ExtResource("8_0wops")])

[connection signal="animation_changed" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
[connection signal="body_entered" from="Fishing spot" to="." method="_on_fishing_spot_body_entered"]

[editable path="Hubert"]
